<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    card_view:cardCornerRadius="6dp"
                                    card_view:cardElevation="3dp"
                                    card_view:cardUseCompatPadding="true">
    <LinearLayout
            android:id="@+id/parent_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">
            <TextView
                    android:id="@+id/txtview_produkid"
                    android:paddingStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ini buat kode"
                    android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:layout_marginRight="30px"
                    android:background="@color/white">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ukuran"
                                android:paddingRight="35dp"/>
                        <TextView
                                android:id="@+id/txtview_Ukuran"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/warna"
                                android:paddingEnd="39dp"/>
                        <TextView
                                android:id="@+id/txtview_Warna"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jumlah"
                                android:paddingEnd="33dp"/>
                        <TextView
                                android:id="@+id/txtview_Jumlah"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/harga"
                                android:paddingEnd="42dp"/>
                        <TextView
                                android:id="@+id/txtview_Harga"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/keterangan"
                                android:paddingEnd="7dp"/>
                        <TextView
                                android:id="@+id/txtview_Keterangan"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>