<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailItemActivity">
    <android.support.v7.widget.CardView
            android:id="@+id/judulpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/stocklogo"
                    android:tint="@color/white"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/edit_stock"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="3dp"
            card_view:cardUseCompatPadding="true"
            card_view:layout_constraintTop_toBottomOf="@+id/judulpage"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">
                <TextView
                        android:id="@+id/row_sendal_kode"
                        android:paddingStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="ini buat kode"
                        android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="255dp">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30px"
                        android:layout_marginRight="30px">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:background="@color/white"
                                android:layout_marginTop="15dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ukuran"
                                    android:paddingRight="35dp"/>
                            <TextView
                                    android:id="@+id/row_sendal_ukuran"
                                    android:paddingStart="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="aaa"/>
                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:background="@color/white"
                                android:layout_marginTop="15dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/warna"
                                    android:paddingEnd="39dp"/>
                            <TextView
                                    android:id="@+id/row_sendal_warna"
                                    android:paddingStart="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="aaa"/>
                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:background="@color/white"
                                android:layout_marginTop="15dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/merk"
                                    android:paddingEnd="48dp"/>
                            <TextView
                                    android:id="@+id/row_sendal_merk"
                                    android:paddingStart="5dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="aaa"/>
                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:background="@color/white"
                                android:layout_marginTop="25dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/jumlah"
                                    android:paddingEnd="33dp"/>
                            <!--<Button android:layout_width="54dp"-->
                                    <!--android:layout_height="wrap_content"-->
                                    <!--android:text="+"-->
                                    <!--android:textColor="@color/white"-->
                                    <!--android:background="@color/colorPrimary"/>-->
                            <EditText android:layout_width="125"
                                      android:layout_height="wrap_content"
                                      android:inputType="number"
                                      android:hint=""/>
                            <!--<Button android:layout_width="54dp"-->
                                    <!--android:layout_height="wrap_content"-->
                                    <!--android:text="-"-->
                                    <!--android:textColor="@color/white"-->
                                    <!--android:background="@color/colorPrimary"/>-->

                        </LinearLayout>
                        <Button android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/set_stock"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:background="@color/colorPrimary"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="20dp"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>