<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".TransaksiPabrikConfirmActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/titlepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/translogo"
                    android:tint="@color/white" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/transaksi"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_product_conf"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/field_perusahaan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titlepage"/>

    <LinearLayout
            android:id="@+id/field_perusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_product_conf">

        <ImageView
                android:id="@+id/imgView_perusahaan"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="24dp"
                android:background="@color/colorPrimary"
                android:padding="8dp" />

        <EditText
                android:id="@+id/edt_CompanyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="0dp"
                android:background="@color/editTextBackground"
                android:hint="@string/nama_perusahaan"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp" />
    </LinearLayout>
    <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_perusahaan"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>