<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    card_view:cardCornerRadius="6dp"
                                    card_view:cardElevation="3dp"
                                    card_view:cardUseCompatPadding="true">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">
            <TextView
                    android:id="@+id/txtview_detailtranspabrikid"
                    android:paddingStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ini buat kode transaksi pabrik"
                    android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorPrimary">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:layout_marginRight="30px"
                    android:background="@color/white">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tanggal"
                                android:paddingRight="29dp"/>
                        <TextView
                                android:id="@+id/txtview_Tanggal"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_perusahaan"
                                android:paddingEnd="22dp"/>
                        <TextView
                                android:id="@+id/txtview_CompanyName"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_harga"
                                android:paddingEnd="6dp"/>
                        <TextView
                                android:id="@+id/txtview_Totalharga"
                                android:paddingStart="5dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="aaa"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>